# Polytope

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: python.yaml
src/polytope/: main.py
src/polytope/core/: __init__.py  uuidgen.py
src/polytope/github/: RequestVerb.py  Requester.py  Session.py  Token.py  __init__.py
src/polytope/github/repository/: GithubRepositoryInternalCode.py  InternalCode.py  Repository.py  RepositoryConfig.py  Response.py  __init__.py
src/polytope/models/: Contest.py  ContestProblem.py  Problem.py  ProblemChecker.py  ProblemCheckerTest.py  ProblemSolution.py  ProblemStatement.py  ProblemTest.py  ProblemValidator.py  ProblemValidatorTest.py  SourceCode.py  __init__.py
src/polytope/utils/: uuidgen.py
test/: base_test.py
test/core/: uuidgen_test.py
test/github/: request_method_test.py  request_verb_test.py  requester_test.py  token_test.py
test/github/repository/: repository_test.py  response_test.py
test/utils/: uuidgen_test.py
