[tool.poetry]
name = "polytope"
version = "0.1.0"
description = ""
authors = ["Gyojun Youn <youn.gyojun@gmail.com>, Jeounghui Nah <jeoungh.nah@gmail.com>, Chris Ohk <utilforever@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Studio-Polytope/Polytope"
repository = "https://github.com/Studio-Polytope/Polytope"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"